# password-manager-terminal

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  clipboard.rs  config.rs  crypto.rs  lib.rs  main.rs  message.rs  secret.rs  store.rs
src/api/: auth.rs  client.rs  error.rs  mod.rs  models.rs  vault.rs
src/ui/: components.rs  mod.rs
v1/: plan.md  terminal-ui.md
wix/: License.rtf  main.wxs
