[package]
name = "pwd-manager-terminal"
version = "0.1.0"
edition = "2021"
description = "Terminal password manager — a ratatui TUI client"
license = "MIT"

[dependencies]
ratatui = "0.30"          # TUI framework (re-exports crossterm)
color-eyre = "0.6"        # error reporting + panic hook (restores terminal)
dotenvy = "0.15"          # load .env at startup

# crypto (M1) — must match the backend's scheme exactly (see docs/protocol-notes.md)
x25519-dalek = "2"        # X25519 ECDH
aes-gcm = "0.10"          # AES-256-GCM (also provides OsRng via aead)
hex = "0.4"               # wire encoding for sealed blobs / public keys
thiserror = "2"           # typed crypto errors
