[package]
name = "pwd-manager-terminal"
version = "0.1.1"
edition = "2021"
authors = ["Berkay Karatay <karatay.berkay@gmail.com>"]
description = "Terminal password manager — a ratatui TUI client"
license = "MIT"
readme = "README.md"
repository = "https://github.com/karatay-lab/password-manager-terminal"

# ── Debian package (cargo deb) ───────────────────────────────────────────────
# Build with `cargo deb`; output lands in target/debian/*.deb. Users install with
# `sudo apt install ./pwd-manager-terminal_<ver>-1_amd64.deb` — no Rust required.
[package.metadata.deb]
maintainer = "Berkay Karatay <karatay.berkay@gmail.com>"
copyright = "2026, Berkay Karatay"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
# Let dpkg-shlibdeps compute the real shared-lib deps (libc6, …). The client is
# rustls-based, so there is no OpenSSL dependency.
depends = "$auto"
extended-description = """\
A terminal (TUI) client for a zero-knowledge password-manager backend. Secrets \
are sealed and opened client-side with X25519 ECDH + AES-256-GCM; the server \
only ever stores ciphertext. Credentials live in an encrypted local store \
unlocked with a master passphrase."""
assets = [
    ["target/release/pwd-manager-terminal", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/pwd-manager-terminal/README.md", "644"],
    [".env.example", "usr/share/doc/pwd-manager-terminal/env.example", "644"],
    ["LICENSE", "usr/share/doc/pwd-manager-terminal/LICENSE", "644"],
]

[dependencies]
ratatui = "0.30"          # TUI framework (re-exports crossterm)
color-eyre = "0.6"        # error reporting + panic hook (restores terminal)
dotenvy = "0.15"          # load .env at startup

# crypto (M1) — must match the backend's scheme exactly (see docs/protocol-notes.md)
x25519-dalek = "2"        # X25519 ECDH
aes-gcm = "0.10"          # AES-256-GCM (also provides OsRng via aead)
hex = "0.4"               # wire encoding for sealed blobs / public keys
thiserror = "2"           # typed crypto / api / store errors

# enrollment (M2) — HTTP client + encrypted local store
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] } # async runtime
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } # HTTP (rustls, no OpenSSL)
serde = { version = "1", features = ["derive"] } # (de)serialize wire DTOs + local store
serde_json = "1"          # JSON bodies + store serialization
argon2 = "0.5"            # passphrase KDF for the at-rest store key
zeroize = { version = "1", features = ["derive"] } # wipe secrets from memory on drop

# secure copy & polish (M6) — native clipboard for copy + auto-clear
# default features off to drop image-clipboard deps; X11 (x11rb) + Wayland, no C deps
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[dev-dependencies]
tempfile = "3"            # isolated temp dirs for store round-trip tests
